# citadel

./: .gitignore  AppIcon.icns  Cargo.toml  Citadel.entitlements  GUIDE.md  LICENSE  README.md  SECURITY.md  audit-v1-final.txt  build.rs  cbindgen.toml  citadel_core.h  embedded.provisionprofile  test-fixture.kdbx
CitadelApp/: BridgingHeader.h  CitadelApp.entitlements  Info.plist  Package.swift  build-app.sh
CitadelApp/App/: AppState.swift  AuditLogView.swift  BackupManager.swift  ChangePasswordView.swift  CitadelApp.swift  ContentView.swift  DragonIcon.swift  EntryDetailView.swift  EntryEditView.swift  EntryListView.swift  LargeTypeWindow.swift  LockScreenView.swift  MainView.swift  PasswordGeneratorView.swift  PasswordHealthView.swift  PasswordStrengthBar.swift  QuickAccessPanel.swift  ReceiveShareView.swift  RecoverySheetView.swift  SettingsView.swift  ShareEntryView.swift  StatusBarController.swift  Theme.swift
CitadelApp/CCitadelCore/: citadel_core.h  shim.c
CitadelApp/Sources/: Argon2Bridge.swift  AuditLogger.swift  AutoLockManager.swift  BiometricManager.swift  BreachChecker.swift  CSVManager.swift  EmergencyAccess.swift  EntryTemplate.swift  FuzzyMatch.swift  KdfPreset.swift  SecureShare.swift  (+10 more)
examples/: dump_xml.rs
fuzz/: Cargo.toml  run_fuzz.sh
fuzz/fuzz_targets/: fuzz_kdbx_open.rs  fuzz_kdbx_roundtrip.rs
scripts/: build-app.sh  generate-icon.swift  healthcheck.sh  install-healthcheck.sh  reproducible-build.sh
src/: ffi.rs  lib.rs  memory.rs  password.rs  types.rs  vault.rs
tests/: integration.rs  interop.rs  negative_corpus.rs  open_decrypt.rs
(+10 files in other folders)
