[package]
name = "citadel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.citadel-core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_kdbx_open"
path = "fuzz_targets/fuzz_kdbx_open.rs"
doc = false

[[bin]]
name = "fuzz_kdbx_roundtrip"
path = "fuzz_targets/fuzz_kdbx_roundtrip.rs"
doc = false
